--- a/views/provision.ejs
+++ b/views/provision.ejs
@@ -7,15 +7,6 @@
   </head>
   <body>
     <script src="<%= personaUrl %>/provisioning_api.js"></script>
-    <script>
-      navigator.id.beginProvisioning(function (email, duration) {
-        if (email === "<%= certify %>") {
-          alert("Congratulations! If browserid-certifier was hooked up, you would be certified as: <%= certify %>");
-          navigator.id.raiseProvisioningFailure();
-        } else {
-          navigator.id.raiseProvisioningFailure();
-        }
-      });
-    </script>
+    <script type="text/javascript" src="/static/js/provision.js"></script>
   </body>
 </html>
