DRY out the headers/footers of user-visible pages

--- a/views/authenticate.ejs
+++ b/views/authenticate.ejs
@@ -1,19 +1,10 @@
-<!doctype html>
-<html lang="<%= lang %>" dir="<%= lang_dir %>">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title><%= gettext('Loading') %></title>
-  </head>
-  <body>
-    <h1><%= gettext('Loading') %></h1>
-    <script src="http://127.0.0.1:10002/authentication_api.js"></script>
-    <script>
-      navigator.id.beginAuthentication(function (email) {
-        var escapedEmail = encodeURIComponent(email);
-        window.location = '/authenticate/forward?email=' + escapedEmail;
-      });
-    </script>
-  </body>
-</html>
+<% include _header %>
+<h1><%= gettext('Loading') %></h1>
+<script src="http://127.0.0.1:10002/authentication_api.js"></script>
+<script>
+  navigator.id.beginAuthentication(function (email) {
+    var escapedEmail = encodeURIComponent(email);
+    window.location = '/authenticate/forward?email=' + escapedEmail;
+  });
+</script>
+<% include _footer %>
