Make page titles dynamic

--- a/views/authenticate_finish.ejs
+++ b/views/authenticate_finish.ejs
@@ -1,5 +1,5 @@
 <% include _header %>
-<h1><%= gettext('Loading') %></h1>
+<h1><%= title %></h1>
 <script src="http://127.0.0.1:10002/authentication_api.js"></script>
 <script>
   navigator.id.completeAuthentication();
