--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -4,6 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title><%= gettext('Loading') %></title>
+    <title><%= title %></title>
   </head>
   <body>
