Only restore window dimensions on subsequent pages

--- a/views/authenticate_finish.ejs
+++ b/views/authenticate_finish.ejs
@@ -1,4 +1,5 @@
 <% include _header %>
+<% include _restore %>
 <h1><%= title %></h1>
 <script src="http://127.0.0.1:10002/authentication_api.js"></script>
 <script>
