--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,4 +1,5 @@
 <% include _header %>
+<% include _restore %>
 <h1><%= title %></h1>
 <p><%= gettext("Something went wrong. Please try again later.") %></p>
 <p><a href="http://127.0.0.1:10002/sign_in#AUTH_RETURN_CANCEL">Cancel</a></p>
