Make Persona URL configurable for finding shims

--- a/views/authenticate.ejs
+++ b/views/authenticate.ejs
@@ -1,6 +1,6 @@
 <% include _header %>
 <h1><%= title %></h1>
-<script src="http://127.0.0.1:10002/authentication_api.js"></script>
+<script src="<%= personaUrl %>/authentication_api.js"></script>
 <script>
   navigator.id.beginAuthentication(function (email) {
     var escapedEmail = encodeURIComponent(email);
