--- a/views/error_mismatch.ejs
+++ b/views/error_mismatch.ejs
@@ -4,5 +4,5 @@
        { claimed: '<b>' + escape(claimed) + '</b>', proven: '<b>' + proven + '</b>' }) %></p>
 <p><%- format(gettext("Please sign into Google as %s then try again."),
        ['<b>' + escape(claimed) + '</b>']) %></p>
-<p><a href="http://127.0.0.1:10002/sign_in#AUTH_RETURN_CANCEL">Try again</a></p>
+<p><a href="<%= personaUrl %>/sign_in#AUTH_RETURN_CANCEL">Try again</a></p>
 <% include _footer %>
