Use API to cancel sideshow when cancelling OpenID

--- a/views/authenticate_finish.ejs
+++ b/views/authenticate_finish.ejs
@@ -2,6 +2,10 @@
 <h1><%= title %></h1>
 <script src="<%= personaUrl %>/authentication_api.js"></script>
 <script>
+<% if (success) { %>
   navigator.id.completeAuthentication();
+<% } else { %>
+  navigator.id.raiseAuthenticationFailure();
+<% } %>
 </script>
 <% include _footer %>
