--- a/views/error.ejs
+++ b/views/error.ejs
@@ -2,8 +2,8 @@
 <h1><%= title %></h1>
 <p><%= gettext("Something went wrong. Please try again later.") %></p>
 <p><button id="cancel">Cancel</button></p>
-<% if (info) { %>
-  <p>Error: <%= info %></p>
+<% if (errorInfo) { %>
+  <p>Error: <%= errorInfo %></p>
 <% } %>
 <script src="<%= personaUrl %>/authentication_api.js"></script>
 <script>
