styling from bigtent-yahoo
- includes connect-fonts and opensans

fixes #14

--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,2 +1,6 @@
+          </div> <!-- /contents -->
+        </div> <!-- /vertical -->
+      </div> <!-- /table -->
+    </section>
   </body>
 </html>
