--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -5,5 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title><%= title %></title>
+    <link rel="stylesheet" href="/opensans-regular/fonts.css" />
+    <link rel="stylesheet" href="/static/css/style.css" />
   </head>
   <body>
+  <header>
+    <h1><a target="_blank" href="/">Mozilla Persona</a></h1>
+  </header>
+  <section class="container">
+    <div class="table">
+      <div class="vertical">
+        <div class="contents">
+
