kills all the inline javascript
the http trips for such small files makes me cry a little

fixes #21

--- a/views/authenticate.ejs
+++ b/views/authenticate.ejs
@@ -1,10 +1,5 @@
 <% include _header %>
 <h1><%= title %></h1>
 <script src="<%= personaUrl %>/authentication_api.js"></script>
-<script>
-  navigator.id.beginAuthentication(function (email) {
-    var escapedEmail = encodeURIComponent(email);
-    window.location = '/authenticate/forward?email=' + escapedEmail;
-  });
-</script>
+<script src="/static/js/auth_start.js"></script>
 <% include _footer %>
