--- a/views/error.ejs
+++ b/views/error.ejs
@@ -6,5 +6,5 @@
   <p>Error: <%= errorInfo %></p>
 <% } %>
 <script src="<%= personaUrl %>/authentication_api.js"></script>
-<script src="/static/js/error.js"></script>
+<script src="/static/js/cancel_button.js"></script>
 <% include _footer %>
