--- a/views/error_mismatch.ejs
+++ b/views/error_mismatch.ejs
@@ -6,5 +6,5 @@
        ['<b>' + escape(claimed) + '</b>']) %></p>
 <p><button id="cancel">Try again</button></p>
 <script src="<%= personaUrl %>/authentication_api.js"></script>
-<script src="/static/js/error.js"></script>
+<script src="/static/js/cancel_button.js"></script>
 <% include _footer %>
