use dataUri for loading gif
- authenticate_finish should also show loading while it redirects

--- a/views/authenticate.ejs
+++ b/views/authenticate.ejs
@@ -1,8 +1,5 @@
 <% include _header %>
-<div class="loading">
-  <p class="progress"><%= title %></p>
-  <img src="/static/i/progress.gif" width="128" height="15" alt="Loading" />
-</div>
+<% include _loading %>
 <script src="<%= personaUrl %>/authentication_api.js"></script>
 <script src="/static/js/auth_start.js"></script>
 <% include _footer %>
