--- a/views/authenticate_finish.ejs
+++ b/views/authenticate_finish.ejs
@@ -1,5 +1,5 @@
 <% include _header %>
-<h1><%= title %></h1>
+<% include _loading %>
 <script src="<%= personaUrl %>/authentication_api.js"></script>
 <% if (success) { %>
 <script src="/static/js/auth_success.js"></script>
