--- a/static/css/style.css
+++ b/static/css/style.css
@@ -92,6 +92,20 @@ button::-moz-focus-inner, .button::-moz-focus-inner {
   border: 0
 }
 
+button[disabled],
+button[disabled]:hover,
+button[disabled]:active,
+button[disabled]:focus {
+    background-color: #bcc4ca;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#bcc4ca), to(#a0a7ae));
+    background-image: -webkit-linear-gradient(top, #bcc4ca, #a0a7ae);
+    background-image:    -moz-linear-gradient(top, #bcc4ca, #a0a7ae);
+    background-image:     -ms-linear-gradient(top, #bcc4ca, #a0a7ae);
+    background-image:      -o-linear-gradient(top, #bcc4ca, #a0a7ae);
+    background-image:         linear-gradient(top, #bcc4ca, #a0a7ae);
+    cursor: default;
+}
+
 
 header {
     background-image: -webkit-linear-gradient(top, rgba(0,0,0,.05), rgba(0,0,0,0));
