--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,9 +27,11 @@ body {
 }
 
 h2 {
-    font-size:32px;
+    font-size: 22px;
     letter-spacing: -1px;
     line-height: 100%;
+    text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.75);
+    font-weight: normal;
 }
 
 button, .button {
@@ -50,6 +52,7 @@ button, .button {
     padding: 6px 10px 7px;
     text-shadow: 0 1px rgba(0, 0, 0, 0.5);
     white-space: nowrap;
+    font-size: 14px;
 }
 
 button:hover,
