--- a/static/css/style.css
+++ b/static/css/style.css
@@ -132,10 +132,10 @@ header h1 a {
 }
 
 .container {
-    bottom: 61px;
+    bottom: 0;
     display: block;
     left: 0;
-    overflow: hidden;
+    overflow: auto;
     position: absolute;
     right: 0;
     top: 61px;
@@ -150,7 +150,7 @@ header h1 a {
 
 .table .vertical {
     display: table-cell;
-    padding: 0 20px;
+    padding: 10px 20px 20px;
     vertical-align: middle;
 }
 
